# INE5429

./: README.md
03-29/: 13-soma.txt  13-soma.txt.gpg  13.gpg  2n.txt.gpg  3984-soma.txt.gpg  3984.txt  gio-2nresposta.txt.gpg  relatorio-03-29.txt
04-05/: revoke.asc
04-12/: custodio.gpg.txt  giovanni.gpg.txt  qs.gpg.txt  qs.revoke.asc  report.md  report.md.html
04-19/: quenio.gpg  quenio.gpg.des3  quenio.gpg.txt  report.md  report.md.html
04-29/: CMakeLists.txt  main.c
P1/: P1.md.html
TG/: TG-01.md.html  TG-02.md.html  TG-03.md.html  TG-04.md.html  TG-05.md.html  commit-log.txt
TG/Presentation/: Hashing.graffle  Permutations.graffle  SA-1.graffle  SA.graffle  slides.html  slides.md
TG/SHA-3/: CMakeLists.txt  bit_string.h  bit_string_tests.cpp  chi.h  chi_tests.cpp  iota.h  iota_tests.cpp  keccak.h  keccak_tests.cpp  main.cpp  min_unit.cpp  min_unit.h  padding.h  padding_tests.cpp  pi.h  pi_tests.cpp  rho.h  rho_tests.cpp  samples.h  sha3.h  sponge.h  sponge_tests.cpp  state_array.h  state_array_tests.c  state_array_tests.cpp  theta.h  theta_tests.cpp  timer.cpp
TI-01/: .gitignore  CMakeLists.txt  main.c  mpz_int64.c  prime.c  prime.h  random.c  random.h
TI-01/report/: markdeep.js  report.md.html
TI-02/: CMakeLists.txt  min_unit.h  mpz_print.h  prime.c  prime.h  prime_tests.c  primitive_root.c  primitive_root.h  primitive_root_main.c  primitive_root_tests.c  random_main.c  timer.h
TI-02/report/: report.md.html
TI-03/: prime.h  prime_main.c  random.h
TI-03/report/: report.md.html
TI-04/: CMakeLists.txt  min_debug.h  min_unit.h  mpz_debug.h  mpz_int64.c  mpz_int64.h  mpz_print.c  mpz_print.h  phi.c  phi.h  prime.c  prime.h  prime_tests.c  rsa.c  rsa.h  rsa_tests.c
TI-05/: mpz_int64.h  phi.c  phi.h  phi_tests.c  prime.h  random.c  random.h  rsa.c  rsa.h  rsa_tests.c
TI-05/report/: report.md.html
